# chrome-remote

./: README.md  pyproject.toml
chrome_remote/: main.py
